src/test/ui/cycle-trait/cycle-trait-supertrait-direct.stderr
error[E0391]: cycle detected when computing the supertraits of `Chromosome`
  --> $DIR/cycle-trait-supertrait-direct.rs:13:1
   |
LL | trait Chromosome: Chromosome {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which again requires computing the supertraits of `Chromosome`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
